# log-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
log_tools/: __init__.py  _serialization.py  apps.py  collector.py  context.py  db.py  file_storage.py  middleware.py  panel.py  redis.py  report.py  settings.py  storage.py
log_tools/management/commands/: log_tools_stats.py
log_tools/templates/log_tools/: panel.html
tests/: settings.py  test_collector.py  test_db.py  test_file_storage.py  test_middleware.py  test_panel.py  test_redis.py  test_report_command.py  test_serialization.py  urls.py
